<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/volleyball"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/teamA"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/teamA_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="52sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/setPoint"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/teamA_set_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/white"
                android:onClick="pointA"
                android:text="@string/point"
                android:textColor="@color/buttonTextColor"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/teamA_break"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/white"
                android:onClick="breakA"
                android:text="@string/breakPoint"
                android:textColor="@color/buttonTextColor"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/teamB"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/teamB_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="52sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/setPoint"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/teamB_set_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/white"
                android:onClick="pointB"
                android:text="@string/point"
                android:textColor="@color/buttonTextColor"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/teamB_break"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/white"
                android:onClick="breakB"
                android:text="@string/breakPoint"
                android:textColor="@color/buttonTextColor"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:background="@color/white"
        android:onClick="reset"
        android:text="@string/reset"
        android:textColor="@color/buttonTextColor"
        android:textStyle="bold"
        android:visibility="invisible" />

    <ScrollView
        android:id="@+id/introScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/introHeader"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/intro"
                android:textSize="24sp" />

            <Button
                android:id="@+id/introButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/buttonTextColor"
                android:onClick="closeIntro"
                android:text="@string/introButton"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>